# Morpheus-Zeus-V4-New

./: README.md  interactive_console_output.xml  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html
downloads/: log.txt
libraries/: ImageCompareLibrary.py
resources/common/: common_resources.resource  common_variables.resource
resources/e2e/wireless/: create_new_ssid.resource
resources/fiber/: fiber.resource
resources/smoke/pages/dashboard/: system_card.resource
resources/smoke/pages/first_access/: first_access.resource
resources/smoke/pages/login/: login.resource
resources/smoke/pages/network/: captive_portal.resource  dhcp.resource  lan_keywords.resource  lan_variables.resource  operation_mode.resource  qos.resource  wan.resource
resources/smoke/pages/security/: firewall.resource
resources/smoke/pages/services/: discovery.resource  ntp.resource  snmp.resource  watchdog.resource
resources/smoke/pages/system/: backup_and_restore.resource  log.resource  management.resource  update_firmware.resource
resources/smoke/pages/wireless/: advanced_wireless.resource  wireless_radio_2ghz.resource  wireless_radio_5ghz.resource  wireless_radius.resource  wireless_site_survey.resource
tests/e2e/wireless/: create_new_ssid.robot
tests/smoke/dashboard/system_card/: portuguese.robot
tests/smoke/first_access/: common.robot  english.robot  portuguese.robot  spanish.robot
tests/smoke/login/: portuguese.robot
tests/smoke/network/captive_portal/: portuguese.robot
tests/smoke/network/dhcp/: portuguese.robot
(+44 files in other folders)
